fix spacing on vote meter

--- a/apioforum/static/style.css
+++ b/apioforum/static/style.css
@@ -137,6 +137,11 @@ nav .links { display: flex; }
 .thread-preview-post { font-style: italic; }
 .thread-preview-ts { font-weight: bold; }
 
+.thread-vote-summary {
+	margin-top: 4px;
+	margin-bottom: -8px;
+}
+
 /* wide screens */
 @media all and (min-width: 600px) { 
 	.thread-listing-title { font-size: larger; }
